--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -24,7 +24,17 @@
     font-size: 10pt;
 }
 
-/* ------------- TABS ------------- */
+.searchbar {
+    width: 400px;
+    height: 25px;
+    margin: 5px auto 15px;
+
+    display: block;
+
+    font-size: 16px;
+}
+
+/* #region TABS */
 .tabs {
     width: 95%;
     max-width: 1200px;
@@ -142,9 +152,9 @@
     background-color: rgb(0, 150, 0);
     border: 2px solid white;
 }
-/* ------------- END TABS ------------- */
+/* #endregion */
 
-/* ------------- PKMN ------------- */
+/* #region PKMN */
 .pkmn-container {
     width: 95%;
     max-width: 1200px;
@@ -266,9 +276,9 @@
     font-size: 7pt;
     text-align: center;
 }
-/* ------------- END PKMN ------------- */
+/* #endregion */
 
-/* ------------- PAGE NAVIGATION ------------- */
+/* #region PAGE NAVIGATION */
 .navigation {
     width: auto;
     height: 60px;
@@ -344,9 +354,9 @@
 .side-button.hidden {
     display: none;
 }
-/* ------------- END PAGE NAVIGATION ------------- */
+/* #endregion */
 
-/* ------------- MOBILE STYLING ------------- */
+/* #region MOBILE STYLING */
 @media screen and (max-width: 480px) {
     .side-button-container {
         width: 60px;
@@ -356,4 +366,5 @@
         width: 40px;
     }
 }
-/* ------------- END MOBILE STYLING ------------- */
+/* #endregion */
+
