--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -31,7 +31,12 @@
 
     display: block;
 
+    color: white;
     font-size: 16px;
+
+    background-color: #222222;
+    border: 2px solid #555555;
+    border-radius: 5px;
 }
 
 /* #region TABS */
